added the other pages for presentation

--- a/main.html
+++ b/main.html
@@ -40,9 +40,9 @@
           <a class="brand" href="#">Promotion Demo</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">Technology Used</a></li>
-              <li><a href="#contact">Testing</a></li>
+              <li class="active"><a href="./main.html">Home</a></li>
+              <li><a href="./technology.html">Technology Used</a></li>
+              <li><a href="./test.html">Testing</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
