--- a/main.html
+++ b/main.html
@@ -135,30 +135,36 @@
               Country
               <span class="caret"></span>
             </a>
-            <ul class="dropdown-menu">
+            <ul id="countryList" class="dropdown-menu">
               <!-- dropdown menu links -->
             </ul>
-          </div>
-          <div class="btn-group">
-            <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-              Province
-              <span class="caret"></span>
-            </a>
-            <ul class="dropdown-menu">
-              <!-- dropdown menu links -->
-            </ul>
-          </div>
-          <div class="btn-group">
-            <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-              City
-              <span class="caret"></span>
-            </a>
-            <ul class="dropdown-menu">
-              <!-- dropdown menu links -->
-            </ul>
-          </div>
+            </div>
+            <div style="display:none;" class="btn-group">
+              <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+                Province
+                <span class="caret"></span>
+              </a>
+              <ul id="provinceList" class="dropdown-menu">
+                <!-- dropdown menu links -->
+              </ul>
+            </div>
+            <div style="display:none;" class="btn-group">
+              <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+                City
+                <span class="caret"></span>
+              </a>
+              <ul id="cityList" class="dropdown-menu">
+                <!-- dropdown menu links -->
+              </ul>
+            </div>
+            <div class="row-fluid">
+              <span id="countrySelect" class="span1"></span>
+              <span id="provinceSelect" class="span1"></span>
+              <span id="citySelect" class="span1"></span>
+            </div>
           </div>
         </div>
+        
         <div class="row-fluid">
           <button id="cancelWork" class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
           <button id="saveWork" class="btn btn-primary">Save changes</button>
