--- a/main.html
+++ b/main.html
@@ -131,7 +131,7 @@
         <div class="row-fluid">
           <div class="well">
             <div class="btn-group">
-            <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+            <a class="btn dropdown-toggle" data-toggle="dropdown" href="javascript:void();">
               Country
               <span class="caret"></span>
             </a>
@@ -140,7 +140,7 @@
             </ul>
             </div>
             <div style="display:none;" class="btn-group">
-              <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+              <a class="btn dropdown-toggle" data-toggle="dropdown" href="javascript:void();">
                 Province
                 <span class="caret"></span>
               </a>
@@ -149,7 +149,7 @@
               </ul>
             </div>
             <div style="display:none;" class="btn-group">
-              <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+              <a class="btn dropdown-toggle" data-toggle="dropdown" href="javascript:void();">
                 City
                 <span class="caret"></span>
               </a>
