--- a/technology.html
+++ b/technology.html
@@ -37,7 +37,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				</button>
-				<a class="brand" href="#">Promotion Demo</a>
+				<a class="brand" href="./main.html">Promotion Demo</a>
 				<div class="nav-collapse collapse">
 					<ul class="nav">
 						<li><a href="./main.html">Home</a></li>
