--- a/test.html
+++ b/test.html
@@ -37,12 +37,12 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				</button>
-				<a class="brand" href="#">Promotion Demo</a>
+				<a class="brand" href="./main.html">Promotion Demo</a>
 				<div class="nav-collapse collapse">
 					<ul class="nav">
 						<li><a href="./main.html">Home</a></li>
-			            <li><a href="./technology.html">Technology Used</a></li>
-			            <li class="active"><a href="./test.html">Testing</a></li>
+            <li><a href="./technology.html">Technology Used</a></li>
+            <li class="active"><a href="./test.html">Testing</a></li>
 					</ul>
 				</div><!--/.nav-collapse -->
 			</div>
@@ -50,7 +50,18 @@
 	</div>
 
 	<div id="main" class="container">
-		
+    <div class="row-fluid">
+      <h3><a href="http://www.jslint.com/" target="_blank">JS Lint - Code Quality Tool</a></h3>
+      <div class="well">
+        <p>JSLint defines a professional subset of JavaScript, a stricter language than that defined by <a href="http://www.ecma-international.org/publications/standards/Ecma-262.htm" target="_blank" >Third Edition of the ECMAScript Programming Language Standard</a>. The subset is related to recommendations found in <a href="http://javascript.crockford.com/code.html" target="_blank" >Code Conventions for the JavaScript Programming Language.</a></p>
+      </div>
+    </div>
+    <div class="row-fluid">
+      <h3><a href="http://docs.seleniumhq.org/projects/ide/" target="_blank">Selenium IDE</a></h3>
+      <div class="well">
+        <p>I have a sampling of Selenium tests in this directory, under test_cases that can be run if you use Selenium IDE. Selenium will effectively test the javascript and the actual UI as they are so closely tied together and elements are created or displayed because of events called in javascript.</p>
+      </div>
+    </div>		
 	</div>
   </body>
 
